postal.css
/* header {
    padding: 1em;
    color: white;
    background-color: black;
    clear: left;
    text-align: center;
}
*/




/* nav {
    float: left;
    max-width: 100px;
    margin: 0;
    padding: 1em;
    color: black;
	font-family: 'Molengo', sans-serif;
	font-weight: 300;
	text-transform: lowercase;
	line-height: 1.7em;
}

nav ul {
    list-style-type: none;
    padding: 0;
	color: black;
}
   
nav ul a {
    text-decoration: none;
    color: black;
}


div.grid {
    margin-left: 170px;
   
    border-left: 1px solid gray;
    padding: 1em;
    overflow: hidden;
    clear: none;
     -webkit-column-count: 3; /* Chrome, Safari, Opera 
    -moz-column-count: 3; /* Firefox 
    column-count: 3;
    -webkit-column-gap: 0px; /* Chrome, Safari, Opera 
    -moz-column-gap: 0px; /* Firefox 
    column-gap: 0px;
}
*/

/* {
	border: 1px solid blue;
} */

div.container {
    width: 100%;
    padding-right: 0px;
}

/* column rewrite */

@media screen and (min-width: 769px) {
  .page-container{ 
	  margin-top: -50px;
  }
  
  #sidebar-logo {
	  margin-top: 40px;
  }
  
  #sidebar {
	  width: 15%;
	  min-width: 200px;
  }
  .page-container {
	  margin-right: -11%;
  }
  
  * {
	  overflow-x: hidden;
  }
}

/* end columnd rewrite */

@import url("http://bootswatch.com/yeti/bootstrap.min.css");

@import url("http://bootswatch.com/paper/bootstrap.min.css");

@import url("http://bootswatch.com/journal/bootstrap.min.css");

@import url("http://bootswatch.com/darkly/bootstrap.min.css");

@import url("http://bootswatch.com/cosmo/bootstrap.min.css");

html {
  height: 100%;
  box-sizing: border-box;
}

#sidebar-logo {
	width: 160px;
	padding-left: 40px;
}

@media screen and (max-width: 768px) {
  #sidebar-logo {
	  width: 140px;
	  padding-left: 40px;
	  }
}

@media screen and (max-width: 320px) {
  #sidebar-logo {
	  padding-left: 40px;
	  width: 90px;
	  }
}

#top-nav {
	border: none;
}

/*
.text-center {
  padding-top: 20px;
}
.col-xs-6 {
  background-color: #fff;
}*/


#sidebar {
	height: 100%;
	padding-right: 0;
	vertical-align: text-top;
	text-align: left;
	/* padding-top: 20px; */
	
}

#sidebar a {
	text-decoration: none;
	color: black;
	background-color: none;
}

#sidebar :hover {
	color: black;
	background: none;
}

#sidebar .nav {
  width: 95%;
  vertical-align: text-top;
}

.nav-list ul {
	text-align: left;
}

.nav-list li {
	list-style: none;
  	font-family: 'Molengo', sans-serif;
	font-weight: 300;
	text-transform: lowercase;
	line-height: 1.3em;
	text-align: left;
	padding-left: 0px;
	margin-left: 0px;
}

#sidebar li :hover{
  text-decoration: underline;
}



/* grid and photo layouts */

.photo {
	width:100%;
}

.cocktail {
	width:100%;
}


.no-gutters {
  margin-right: 0;
  margin-left: 0;
}
.no-gutters > [class^="col-"],
.no-gutters > [class*=" col-"] {
  padding-right: 0;
  padding-left: 0;
}

.blankspace {
	visibility: hidden;
}

@media only screen and (max-width: 320px) {
	.blankspace {
		display: none;
	}
}


/* footer styling */
footer {
	padding: 1em 1em 1em 0em;
	color: white;
	font-family: 'Molengo', sans-serif; 
	position: absolute;
	right: 0;
	bottom: 0;
	left: 0;
	padding: 1em;
	background-color: black;
	text-align: center;
	vertical-align: middle;
	height: 60px;
	clear: both;
}

footer span.logo {
	text-align: left;
}

#about-page-footer-margin {
	margin: 10px 0 0 10px;
	clear: both;
}

#cocktails-page-footer-margin {
	clear: left;
	height: 30px;
}

ul.bottomnav {
    width: 100%;
    text-align: center;
    list-style-type: none;
    text-align: center;
    position: inherit;
    font-family: 'Molengo', sans-serif;

}

ul.bottomnav li {
	display: inline-block;
    list-style-type: none;
    position:relative;
    padding-left: 5px;
    font-family: 'Molengo', sans-serif;

}

ul.bottomnav li a {
    display: block;
    color: white;
    text-align: center;
    padding: 0px 16px;
    text-decoration: none;
    font-family: 'Molengo', sans-serif;
}

.copyright {
	text-align: left;
	vertical-align: bottom;
	font-family: 'Molengo', sans-serif;
	font-weight: 300;
	font-size: .8em;
	padding-right: 15px;
}

@media only screen and (max-width: 535px) {
	.copyright {
		display: none;
	}
}

@media only screen and (max-width: 535px) {
	ul.bottomnav {
		margin-left: -40px;
	}
}
/* end footer styling */


/* about page content */
.about-text {
    overflow: hidden;
	font-family: 'Molengo', sans-serif;
	padding: 0px 40px 0px 20px;
	line-height: 1.3em;
	font-size: 1.7em;
	vertical-align: text-top;
}

@media only screen and (max-width: 768px) {
  .about-text {
    font-size: 1.3em;
    line-height: 1.1em;
  }
}

@media only screen and (max-width: 320px) {
  .about-text {
    font-size: 1.1em;
    line-height: 1.1em;
    padding: 0px 20px 0px 10px;
    margin-bottom: 20px;
  }
}


.hero  {
	width: 90%;
	padding-bottom: 30px;
	vertical-align: text-top;
}

.contact {
	padding-bottom: 40px;
	font-family: 'Molengo', sans-serif;
	font-size: 1em;
	line-height: 1.1em;
}

.contact a {
	color: black;
	text-decoration: underline;
	font-size: inherit;
	font-style: normal;
	font-size: .95em;
}
/* end about page content*/


/* collapsed sidebar styles */
.icon-bar {
	color: black;
	border: 1px solid black;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  padding-top: 51px; 
  position: relative;
  min-height: 100%;
}

.page-container {
	margin-bottom: 30px;
	clear: both;
}

@media screen and (max-width: 767px) {
  .row-offcanvas {
    position: relative;
    -webkit-transition: all 0.25s ease-out;
    -moz-transition: all 0.25s ease-out;
    transition: all 0.25s ease-out;
  }
  .row-offcanvas-right
  .sidebar-offcanvas {
    right: -41.6%;
  }
  .row-offcanvas-left
  .sidebar-offcanvas {
    left: -41.6%;
  }
  .row-offcanvas-right.active {
    right: 41.6%;
  }
  .row-offcanvas-left.active {
    left: 41.6%;
  }
  .sidebar-offcanvas {
    position: absolute;
    top: 0;
    width: 41.6%;
  }
  #sidebar {
    padding-top:0;
  }
  
  
}

